Add footer for weather icons attribution
Added footer with attribution for weather icons.

--- a/index.html
+++ b/index.html
@@ -38,5 +38,14 @@
   </div>
 
   <script src="app.js"></script>
+  <footer>
+  <p>
+    <a href="https://www.flaticon.com/free-icons/weather" title="weather icons">
+      Weather icons created by iconixar - Flaticon
+    </a>
+  </p>
+</footer>
+
 </body>
+
 </html>
