Add favicon to Quick Weather application
Added a favicon link to the head section.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Quick Weather</title>
+    <link rel="icon" type="image/png" href="cloudy.png">
+
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -38,14 +40,8 @@
   </div>
 
   <script src="app.js"></script>
-  <footer>
-  <p>
-    <a href="https://www.flaticon.com/free-icons/weather" title="weather icons">
-      Weather icons created by iconixar - Flaticon
-    </a>
-  </p>
-</footer>
 
 </body>
 
 </html>
+
